# cargo-mkdocs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.vim/: coc-settings.json
src/: main.rs  opts.rs  util.rs
src/cargo/: metadata.rs  mod.rs
