[package]
name = "cargo-mkdocs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
cargo_toml = "0.20.5"
clap = { version = "4.5.21", features = ["derive", "unicode", "wrap_help", "cargo", "unstable-doc"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
